[package]
authors = ["Brian Payne <bwpayne@gmail.com>"]
edition = "2018"
name = "dot_http"
version = "0.1.0"

[dependencies]
Boa = "0.5.1"
surf = "1.0.2"
pest = "2.1.2"
pest_derive = "2.1.0"
gc = "0.3.3"
clap = "2.33.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
runtime = { version = "0.3.0-alpha.6", optional = true }

[dependencies.futures-preview]
version = "0.3.0-alpha.18"
features = ["compat", "io-compat"]
