[package]
authors = ["Brian Payne <bwpayne@gmail.com>"]
edition = "2018"
name = "dot_http"
version = "0.1.0"

[dependencies]
Boa = "0.5.1"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
tokio = { version = "0.2", features = ["sync"] }
pest = "2.1.2"
pest_derive = "2.1.0"
gc = "0.3.3"
clap = "2.33.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
http-test-server = "1.0.0"
tempfile = "3.1.0"

#[dependencies.futures-preview]
#version = "0.3.0-alpha.18"
#features = ["compat", "io-compat"]
