[package]
authors = ["Brian Payne <bwpayne@gmail.com>"]
edition = "2018"
name = "dot-http"
version = "0.1.0"
readme = "README.md"
description = "dot-http is a text-based scriptable HTTP client. It is a simple language that resembles the actual HTTP protocol but with additional features to make it practical for someone who builds and tests APIs."
repository = "https://github.com/bayne/dot-http"
keywords = ["http", "scriptable", "javascript", "API"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming::http-client"]
license = "Apache-2.0"

[[bin]]
name = "dot-http"
path = "src/main.rs"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bayne/dot-http" }
appveyor = { repository = "bayne/dot-http", branch = "master", service = "github" }

[dependencies]
Boa = {version ="0.5.1", optional = true}
rusty_v8 = {version = "0.4", optional = true}
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
tokio = { version = "0.2", features = ["sync"] }
pest = "2.1.2"
pest_derive = "2.1.0"
gc = "0.3.3"
clap = "2.33.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
http-test-server = "1.0.0"
tempfile = "3.1.0"

[features]
default = ["boa"]
boa = ["Boa"]
v8 = ["rusty_v8"]

