[package]
authors = ["Brian Payne <bwpayne@gmail.com>"]
edition = "2018"
name = "dot-http-lib"
version = "0.1.0"
readme = "README.md"
description = "dot-http is a text-based scriptable HTTP client. It is a simple language that resembles the actual HTTP protocol but with additional features to make it practical for someone who builds and tests APIs."
repository = "https://github.com/bayne/dot-http"
keywords = ["http", "scriptable", "javascript", "API"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming::http-client"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bayne/dot-http" }
appveyor = { repository = "bayne/dot-http", branch = "master", service = "github" }

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"

http = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"